Add rewrite rule for more easy admin access.

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,6 +2,9 @@ Options +FollowSymLinks
 IndexIgnore */*
 RewriteEngine on
 
+# Make admin access more easy.
+RewriteRule ^admin/?$ /profile [L,R]
+
 # If a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
